Fix bulk get jetton balances
