# pkg/oas/oas_validators_gen.go
@@ -2382,6 +2382,29 @@ func (s GetBlockchainAccountTransactionsSortOrder) Validate() error {
 	}
 }
 
+func (s *GetBulkAccountJettonBalancesReq) Validate() error {
+	if s == nil {
+		return validate.ErrNilPointer
+	}
+
+	var failures []validate.FieldError
+	if err := func() error {
+		if s.AccountIds == nil {
+			return errors.New("nil is invalid value")
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "account_ids",
+			Error: err,
+		})
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+	return nil
+}
+
 func (s GetInscriptionOpTemplateOperation) Validate() error {
 	switch s {
 	case "transfer":
